<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PlayerSetupFragment">

    <fragment
        android:id="@+id/PlayerSetupFragment"
        android:name="com.cxe.nfcmonopoly3.ui.player_setup.PlayerSetupFragment"
        android:label="@string/player_setup_fragment_title"
        tools:layout="@layout/fragment_player_setup">
        <action
            android:id="@+id/action_PlayerSetupFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.cxe.nfcmonopoly20.ui.game.GameFragment"
        android:label="@string/game_fragment_label" >
        <action
            android:id="@+id/action_GameFragment_to_PlayerFragment"
            app:destination="@id/PlayerFragment" />
        <action
            android:id="@+id/action_GameFragment_to_TradeFragment"
            app:destination="@id/TradeFragment" />
        <action
            android:id="@+id/action_GameFragment_to_PlayerSetupFragment"
            app:destination="@id/PlayerFragment" />
    </fragment>
    <fragment
        android:id="@+id/PlayerFragment"
        android:name="com.cxe.nfcmonopoly20.ui.game.player.PlayerFragment"
        android:label="@string/player_fragment_label" >
        <argument
            android:name="player"
            app:argType="com.cxe.nfcmonopoly20.logic.player.Player" />
    </fragment>
    <fragment
        android:id="@+id/TradeFragment"
        android:name="com.cxe.nfcmonopoly20.ui.game.trade.TradeFragment"
        android:label="@string/trade_fragment_title" />

</navigation>