<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="utilityProperty"
            type="com.cxe.nfcmonopoly3.data.entities.PropertyEntity" />

        <import type="com.cxe.nfcmonopoly3.util.UtilityTypeToDrawable" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@{utilityProperty.mortgaged ? @drawable/property_border_mortgage_small : @drawable/property_border_small}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/property_layout_small">

                <ImageView
                    android:id="@+id/utility_image"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/utility_icon"
                    android:src="@{UtilityTypeToDrawable.convert(context, utilityProperty.utilityType)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/utility_title"
                    style="@style/property_title_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="2dp"
                    android:text="@{utilityProperty.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/utility_image" />

                <TextView
                    android:id="@+id/utility1"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/utility_1"
                    app:layout_constraintBottom_toTopOf="@+id/utility2"
                    app:layout_constraintEnd_toStartOf="@+id/utility1_amount"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/utility_title" />

                <TextView
                    android:id="@+id/utility1_amount"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/utility_1_amount"
                    app:layout_constraintBottom_toTopOf="@+id/utility2_amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/utility1"
                    app:layout_constraintTop_toBottomOf="@+id/utility_title" />

                <TextView
                    android:id="@+id/utility2"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:text="@string/utility_2"
                    app:layout_constraintBottom_toTopOf="@id/utility3"
                    app:layout_constraintEnd_toEndOf="@+id/utility1"
                    app:layout_constraintStart_toStartOf="@+id/utility1"
                    app:layout_constraintTop_toBottomOf="@+id/utility1" />

                <TextView
                    android:id="@+id/utility2_amount"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:text="@string/utility_2_amount"
                    app:layout_constraintBottom_toTopOf="@id/utility3_amount"
                    app:layout_constraintEnd_toEndOf="@+id/utility1_amount"
                    app:layout_constraintStart_toStartOf="@+id/utility1_amount"
                    app:layout_constraintTop_toBottomOf="@+id/utility1_amount" />

                <TextView
                    android:id="@+id/utility3"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/utility_3"
                    android:visibility="@{utilityProperty.mega ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/utility2"
                    app:layout_constraintStart_toStartOf="@+id/utility2"
                    app:layout_constraintTop_toBottomOf="@+id/utility2" />

                <TextView
                    android:id="@+id/utility3_amount"
                    style="@style/property_details_small"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/utility_3_amount"
                    android:visibility="@{utilityProperty.mega ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/utility2_amount"
                    app:layout_constraintStart_toStartOf="@+id/utility2_amount"
                    app:layout_constraintTop_toBottomOf="@+id/utility2_amount" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>